--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git://github.com/stelcheck/SuperApp.git"
   },
-  "engines" {
+  "engines": {
     "node": ">=0.10"
   },
   "author": "Marc Trudel <mtrudel@wizcorp.jp>",
