--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git://github.com/stelcheck/SuperApp.git"
   },
   "engines": {
-    "node": ">=0.10"
+    "node": "0.10.1"
   },
   "author": "Marc Trudel <mtrudel@wizcorp.jp>",
   "license": "MIT",
