--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "SuperApp",
   "version": "0.0.0",
-  "description": "Test Ap",
+  "description": "Test App",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,12 +11,11 @@
     "url": "git://github.com/stelcheck/SuperApp.git"
   },
   "engines": {
-    "node": "0.10.1"
+    "node": "0.10.10"
   },
   "author": "Marc Trudel <mtrudel@wizcorp.jp>",
   "license": "MIT",
   "dependencies": {
-    "nodegit": "0.0.79",
     "async": "~0.2.9",
     "connect": "~2.8.5",
     "config": "~0.4.29",
