--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Test App",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "make test",
+    "db": "make db"
   },
   "repository": {
     "type": "git",
